added jwt with auth to the server
