# swagger_server/models/__init__.py
@@ -3,5 +3,7 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from swagger_server.models.inline_response200 import InlineResponse200
+from swagger_server.models.login_body import LoginBody
 from swagger_server.models.new_task import NewTask
 from swagger_server.models.task import Task
